--- a/apps/users/templates/admin/logentry_summary.html
+++ b/apps/users/templates/admin/logentry_summary.html
@@ -2,64 +2,74 @@
 {% block extrahead %}<script src={{jquery_path}} type="text/javascript"></script>{% endblock %}
 {% block title %}Отчет по журналу{% endblock %}
 {% block content %}
+
 <h2>Отчет за период:</h2>
-<form action="/admin/users/logentry_summary/" method="post">
-    {% csrf_token %}
-    <div>
-        {{filter_form}}
-        <p><input type="submit" value="Обновить"/></p>
+<div id="content-main">
+    <div class="module filtered">
+        <form action="/admin/users/logentry_summary/" method="post" class="changelist-form">
+            {% csrf_token %}
+            <div>
+                {{filter_form}}
+                <p><input type="submit" value="Обновить"/></p>
+            </div>
+        </form>
+        <div class='results'>
+            <table id='result_list' style='width: 100%;'>
+                <thead>
+                <tr>
+                    <th class='column-__str__'>Пользоваль</th>
+                    <th class='column-__str__'>Тип действия</th>
+                    <th class='column-__str__'>Тип Контента</th>
+                    <th class='column-__str__'>Кол-во</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% regroup report_data by user_name as user_list %}
+                {% for user in user_list %}
+                <tr data_user_total_line="{{user.grouper}}">
+                    <td>
+                        {{ user.grouper }}
+                    </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+
+                {% for item in user.list %}
+                <tr data_user_line="{{user.grouper}}" data_user_id='{{item.user_id}}'>
+                    <td>
+                        {{ user.grouper }}
+                    </td>
+                    <td>{{ item.action }}</td>
+                    <td>{{ item.type }}</td>
+                    <td>{{ item.count }}</td>
+                </tr>
+
+                {% endfor %}
+
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
-</form>
-<table id='table-report'>
-    <tr>
-        <th>Пользоваль</th>
-        <th>Тип действия</th>
-        <th>Тип Контента</th>
-        <th>Кол-во</th>
-    </tr>
-    {% regroup report_data by user_name as user_list %}
-    {% for user in user_list %}
-    <tr data_user_total_line="{{user.grouper}}">
-        <td>
-            {{ user.grouper }}
-        </td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-
-    {% for item in user.list %}
-    <tr data_user_line="{{user.grouper}}" data_user_id='{{item.user_id}}'>
-        <td>
-            {{ user.grouper }}
-        </td>
-        <td>{{ item.action }}</td>
-        <td>{{ item.type }}</td>
-        <td>{{ item.count }}</td>
-    </tr>
-
-    {% endfor %}
-
-    {% endfor %}
-</table>
-
+</div>
 <script>
-    $(function(){
+ $(function(){
      $.each($('tr[data_user_total_line]', '#table-report'), function(_, item){
          var user_name = $(item).attr('data_user_total_line')
          var t = 0;
-         var items = $('tr[data_user_line='+ user_name +'] td:last', '#table-report');
-         var user_id =  $('tr[data_user_line='+ user_name +']:first', '#table-report').attr('data_user_id');
+         var items = $('tr[data_user_line='+ user_name +'] td:last', '#result_list');
+         var user_id =  $('tr[data_user_line='+ user_name +']:first', '#result_list').attr('data_user_id');
          $.each(items,
                 function(_, v) {
-                  t = t + parseInt($(v).text(), 10)
+             t = t + parseInt($(v).text(), 10)
          });
          $('td:first', item).html("<a href='/admin/users/users/"+ user_id +"/'>"+$('td:first', item).text()+"<a>")
          if (t > 0){
              $('td:last', item).text(t)
          };
      });
-     });
+ });
 </script>
 
 {% endblock %}
