--- a/templates/api_test.html
+++ b/templates/api_test.html
@@ -35,6 +35,37 @@ $.ajaxSetup({
         }
     }
 });
+
+function get_new_token(){
+
+var ses_token = "lal";
+
+$.ajax({
+    type:"POST",
+    url: "/auth/login/",
+    data: "username=admin&password=admin",
+    async: false,
+    success: function(data){
+        var token;
+        token = data.token;
+        $.ajax({
+            url: "v1/auth/session.json",
+        	type: "GET",
+        	async: false,
+        	headers: {'Authorization': 'Token '+token},
+        	success: function(data){
+                ses_token = data.session_token;
+                console.log(ses_token);
+        	}
+        });
+    }
+});
+    return ses_token;
+}
+
+var ses_token = get_new_token()
+
+
 </script>
 {%csrf_token%}
 </body>
