- current version interfaces files

--- a/interface/index.jade
+++ b/interface/index.jade
@@ -1,46 +1,3 @@
-// Created by Mimoid on 28.03.2014.
-- var title = "Всё видео - главная страница"
-- var filter_genres = {1: "Аниме", 2: "Боевик", 3: "Комедия", 4: "Семейный"}
-- var filter_year_old = {0: "Этого года", 1: "не старше прошлого года", 2: "не старше 2 лет", 3: "не старше 3 лет", 5: "не старше 5 лет", 10: "не старше 10 лет", 999: "за всё время"}
-- var filter_price = {0: "бесплатно", 50: "до 50 рублей", 100: "до 100 рублей", 200: "до 200 рублей", 9999: "любая"}
-- var filter_rating = {0: "любой", 5: "выше пяти", 6: "выше шести", 6.5: "выше 6.5", 7: "выше 7", 8: "выше 8", 9: "выше 9"}
-- var films = [{id: 1, name: "Самый лучший фильм", year: 2013, rating: 0}, {id: 2, name: "Ещё один фильмец", year: 2012, rating: 5.5}]
-html
-    include jade/head
-    body
-        include jade/header
-        .container
-            .col-md-2.text-left
-                h1
-                   | Фильмы
-            .col-md-10
-                form.form-inline.frm-filter#frm_filter
-                    .form-group
-                        label(for="fil_genre") Жанр
-                        select.form-control#fil_genre
-                            each item, i in filter_genres
-                                option(value= i)= item
-                    .form-group
-                        label(for="fil_year_old") Год выпуска
-                        select.form-control#fil_year_old
-                            each item, i in filter_year_old
-                                option(value= i)= item
-                    .form-group
-                        label(for="fil_raiting") Рейтинг
-                        select.form-control#fil_rating
-                            each item, i in filter_rating
-                                option(value= i)= item
-                    .form-group
-                        label(for="fil_price") Стоимость
-                        select.form-control#fil_price
-                            each item, i in filter_price
-                                option(value= i)= item
-        include jade/part_afilm
-        .container#output_place
-            each item in films
-                +afilm(item)
-        .container.text-center#load-more-place
-            button.btn.btn-default#btn_loadmore Загрузить ещё
-        include jade/footer
-        script.
-            $(document).ready(function () {window.InitApp({}, "Main")})
+- var films_new = [{id: 1, name: "Самый лучший фильм Самый лучший фильм ", year: 2013, rating: 0, instock: true, hasFree: true}, {id: 2, name: "Ещё один фильмец", year: 2012, rating: 5.5, instock: true, price: 200}, {id: 1, name: "Самый лучший фильм Самый лучший фильм ", year: 2013, rating: 0, instock: true, hasFree: true}, {id: 2, name: "Ещё один фильмец", year: 2012, rating: 5.5, instock: true, price: 200}]
+- var films = [{id: 1, name: "Самый лучший фильм", year: 2013, rating: 0, instock: true, price: 100, hasFree: true}, {id: 2, name: "Ещё один фильмец", year: 2012, rating: 5.5}]
+include jade/page_index
