--- a/interface/jade/footer.jade
+++ b/interface/jade/footer.jade
@@ -1,19 +1,15 @@
-footer.container
-    hr
-    .col-md-2
-       | Здесь лого
-    .col-md-2
-       | &copy; Всё видео 2014<br/>Все права защищены
-    .col-md-6.text-center
-        ul.list-inline.list-unstyled
-            li
-                a(href="#") Правовая информация
-            li
-                a(href="#") О сервисе
-    .col-md-2
-        .text-left
-            | Мы в социальных сетях
-            ul.list-inline.list-unstyled
+footer
+    .container
+        .col-md-3
+            img(src=conf.images_url + "logo_foot.png",alt="")
+        .col-md-6.footer-links
+            ul
+                li
+                    a(href="#") Правовая информация
+                li
+                    a(href="#") О сервисе
+        .col-md-3
+            ul.list-inline.list-unstyled.footer-social
                 li
                     a(href="#") V
                 li
@@ -22,9 +18,12 @@ footer.container
                     a(href="#") T
                 li
                     a(href="#") G
+    .container.copyright
+        &copy; ВсёВидео, 2014. Все права защищены
 script(src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js")
-script(src="js/bootstrap.min.js")
-script(src="js/mi.rest.js")
-script(src="js/mi.helper.js")
-script(src="3d/rateit/jquery.rateit.js")
-script(src="js/app.js")
+script(src=conf.js_url + "config.js")
+//script(src=conf.js_url + "bootstrap.min.js")
+script(src=conf.js_url + "mi.rest.js")
+script(src=conf.js_url + "mi.helper.js")
+script(src=conf.third_url + "rateit/jquery.rateit.js")
+script(src=conf.js_url + "app.js")
