--- a/interface/person.jade
+++ b/interface/person.jade
@@ -1,38 +1,3 @@
-- person = {name: "Имя персоны", photo: "", bio: "Lorem ipsum", birthdate: "1978-01-22", roles: ["актер", "режиссёр"], birthplace: ["Москва", "Россия"]}
-- header_title= person.name
-- person_roles = person.roles && person.roles.length?person.roles.join(", "):false
-- person_birthplace = person.birthplace && person.birthplace.length?person.birthplace.join(", "):false
-- person_birthdate = new Date(person.birthdate)
-- months = ["января", "февраля", "марта", "апреля", "мая", "июня", "июля", "августа", "сентября", "октября", "ноября", "декабря"]
-- date_now = new Date()
-- person_year_old = date_now.getFullYear() - person_birthdate.getFullYear()
-- if ((date_now.getMonth() < person_birthdate.getMonth()) || (date_now.getMonth() == person_birthdate.getMonth() && date_now.getDate() < person.birthdate.getDate())) person_year_old--
-- person_birthdate_string = person_birthdate.getDate() + " " + months[person_birthdate.getMonth()] + " " + person_birthdate.getFullYear() + " г. (" + person_year_old + " года)"
-html
-    include jade/head
-    body
-        include jade/header
-        .container
-            .col-md-3.text-center
-                img.person-photo.img-responsive(src=person.photo || "img/noperson.jpg")
-                button.btn.btn-default Подписаться
-            .col-md-9
-                table.table.table-bordered
-                    - if (person_roles)
-                        tr
-                            td=person_roles
-                    - if (person_birthplace)
-                        tr
-                            td=person_birthplace
-                    tr
-                        td=person_birthdate_string
-                h3 Биография
-                =person.bio
-        .container
-            h3 Фильмография
-            #films
-        .container.text-center#load-more-place
-            button.btn.btn-default#btn_loadmore Загрузить ещё
-        include jade/footer
-        script.
-            $(document).ready(function () {window.InitApp({page_conf: {person_id: 1}}, "Person")})
+- person = {id: 10, name: "Имя персоны", photo: "static/img/tmp/person1.jpg", bio: "Lorem ipsum", birthdate: "1974-01-22", roles: ["актер", "режиссёр"], birthplace: ["Москва", "Россия"]}
+- filmography = [{id: 1, name: "Самый лучший фильм Самый лучший фильм ", year: 2013, rating: 0, instock: true, hasFree: true}, {id: 2, name: "Ещё один фильмец", year: 2012, rating: 5.5, instock: true, price: 200}, {id: 1, name: "Самый лучший фильм Самый лучший фильм ", year: 2013, rating: 0, instock: true, hasFree: true}, {id: 2, name: "Ещё один фильмец", year: 2012, rating: 5.5, instock: true, price: 200}]
+include jade/page_person
