--- a/interface/register.jade
+++ b/interface/register.jade
@@ -1,63 +1,1 @@
-- header_title="Регистрация"
-html
-    include jade/head
-    body
-        include jade/header
-        .container
-            .col-md-9
-                h3 С помощью Email
-                form.form-horizontal(role="form",method="post",action="")
-                    .form-group
-                        label.col-sm-3.control-label(for="inp_email") Email
-                        .col-sm-8
-                            input.form-control#inp_email(type="email",name="email",placeholder="Email",required)
-                    .form-group
-                        label.col-sm-3.control-label(for="inp_password") Пароль
-                        .col-sm-8
-                            input.form-control#inp_password(type="password",name="password",placeholder="Пароль",required)
-                    .form-group
-                        label.col-sm-3.control-label(for="inp_repeat_password") Повторите пароль
-                        .col-sm-8
-                            input.form-control#inp_repeat_password(type="password",placeholder="Повторите пароль",required)
-                    .col-sm-offset-3
-                        button.btn.btn-default(type="submit") Войти
-            .col-md-3
-                h3 С помощью соц.сетей
-                    .login_social_place
-                        .col-sm-4
-                            img.img-responsive(src="img/vkontakte.png")
-                        .col-sm-8
-                            a(href="#") Вконтакте
-                    .clearfix &nbsp;
-                    .login_social_place
-                        .col-sm-4
-                            img.img-responsive(src="img/facebook.png")
-                        .col-sm-8
-                            a(href="#") Фейсбук
-                    .clearfix &nbsp;
-                    .login_social_place
-                        .col-sm-4
-                            img.img-responsive(src="img/twitter.png")
-                        .col-sm-8
-                            a(href="#") Твиттер
-                    .clearfix &nbsp;
-                    .login_social_place
-                        .col-sm-4
-                            img.img-responsive(src="img/google-plus.png")
-                        .col-sm-8
-                            a(href="#") Google+
-                    .clearfix &nbsp;
-                    .login_social_place
-                        .col-sm-4
-                            img.img-responsive(src="img/odnoklassniki.png")
-                        .col-sm-8
-                            a(href="#") Одноклассники
-                    .clearfix &nbsp;
-                    .login_social_place
-                        .col-sm-4
-                            img.img-responsive(src="img/mailru.png")
-                        .col-sm-8
-                            a(href="#") Mail.ru
-        include jade/footer
-        script.
-            $(document).ready(function () {window.InitApp({}, "Register")})
+include jade/page_register
