--- a/interface/jade/mixins.jade
+++ b/interface/jade/mixins.jade
@@ -1,13 +1,9 @@
 mixin anchor_list(list, url)
-     anchor_first_element = true
-     each item in list
-        if anchor_first_element
-            anchor_first_element = ""
-        else
-            anchor_first_element = ", "
-
+    - anchor_first_element = true
+    - each item in list
+        =anchor_first_element?"":", "
         a(href=url.replace("%", item.id))=item.name
-        anchor_first_element = false
+        - anchor_first_element = false
 //- {name: - name of actor, id - id of actor, photo - photo of actor}
 mixin person_thumb(person, id)
     .person-thumb(id=id?id:("person_thumb_" + person.id),style='background-image:url("' + (person.photo || conf.noperson_url) + '")')
@@ -19,7 +15,7 @@ mixin user_thumb(user, id)
         p
             a(href="/user/"+user.id).name=user.name
 
-mixin film_thumb(item, id)
+mixin film_thumb(item,id)
     .film-thumb(id=id?id:("film_thumb_"+item.id)).col-md-3
         .poster-place(style='background-image: url("' + (item.poster?item.poster:conf.noposter_url) + '")')
         .rating-place(class = item.rating?"":"invisible")
@@ -54,18 +50,17 @@ mixin comment_thumb(item, id)
                     a(href="/user/"+item.user.id,data-user-id=item.id)=item.user.name
             .text!=item.text
 
-mixin location_thumb(item, id)
+mixin location_thumb(item,id)
     .location-thumb(id=id?id:(item.id?"loc_thumb_" + item.id:""))
         .btn-place
             button #{quality_text(item.quality)}
         .info-place
             p.name #{location_name(item.type)}
             p.price
-                - if (item.price_type == "f")
+                - if (item.price_type=="f")
                     смотреть бесплатно
-                - else
-                  - if (item.price) {
-                        =item.price + " р."
+                - else if (item.price)
+                    =item.price + " р."
 
 mixin user_place(user)
     #usr_reg_place(class=user.is_auth?"":"display-none")
