Fixed oauth links

--- a/interface/jade/page_register.jade
+++ b/interface/jade/page_register.jade
@@ -27,19 +27,19 @@ html
                         .col-sm-4
                             img.img-responsive(src="static/img/vkontakte.png")
                         .col-sm-8
-                            a(href="#") Вконтакте
+                            a(href="/login/vk-oauth/") Вконтакте
                     .clearfix &nbsp;
                     .login_social_place
                         .col-sm-4
                             img.img-responsive(src="static/img/facebook.png")
                         .col-sm-8
-                            a(href="#") Фейсбук
+                            a(href="/login/facebook/") Фейсбук
                     .clearfix &nbsp;
                     .login_social_place
                         .col-sm-4
                             img.img-responsive(src="static/img/twitter.png")
                         .col-sm-8
-                            a(href="#") Твиттер
+                            a(href="/login/twitter/") Твиттер
                     .clearfix &nbsp;
                     .login_social_place
                         .col-sm-4
