Adding new films for index page

--- a/interface/static/tpl/film-thumb.jade
+++ b/interface/static/tpl/film-thumb.jade
@@ -1,2 +1,4 @@
 include ../../jade/mixins
+include ../../jade/config
+include ../../jade/globals
 mixin film_thumb({id: "NA", name: "", year: "", relation: {}, rating: {}, poster: "static/img/noposter.jpg"})
