--- a/interface/static/tpl/person-thumb.jade
+++ b/interface/static/tpl/person-thumb.jade
@@ -1,3 +1,2 @@
-include ../../jade/config
 include ../../jade/mixins
-mixin person_thumb({id: "NA", name: ""})
+mixin person_thumb({name: "", photo: "", id: "NA"})
