--- a/interface/static/css/style.css
+++ b/interface/static/css/style.css
@@ -14,7 +14,7 @@ body {background: url("../img/common-bg.jpg") repeat}
 .film-thumb .rating-place {border-radius: 50%; width: 50px; height: 50px; background: #dee5f8; color: #7d7a7f; margin: -35px auto 0 auto; font-size: 18px; font-weight: bold}
 .film-thumb .rating-place .rating {margin: 0; padding: 0; line-height: 50px}
 .film-thumb .notwatch-btn {border: 0; background: url("../img/notwatch.png") 50% 50% no-repeat; width: 16px; height: 15px; color: transparent; float: left}
-.film-thumb .name-place {font-size: 16px; margin-top: 10px; text-align: left; min-height: 45px}
+.film-thumb .name-place {font-size: 16px; margin-top: 10px; text-align: left; min-height: 50px}
 .film-thumb .name-place a {color: #4868cd; font-weight: bold; border-bottom: 1px solid #4868cd}
 .film-thumb .name-place span {color: #7e7f7f}
 .film-thumb .rel-place {margin: 10px auto 10px auto; height: 20px; width: 210px}
@@ -29,17 +29,29 @@ body {background: url("../img/common-bg.jpg") repeat}
 .film-thumb .watchprice {color: #757575}
 .film-thumb .watchprice a {color: #4868cd; border-bottom: 1px solid #4868cd}
 
-.films-new .film-thumb .poster-wrapper {background: url("../img/film-new-poster-bg.png") no-repeat 50% 0;}
-.films-new .film-thumb .rating-place {background: #007ebc; color: #fff;}
-.films-new .film-thumb .name-place a {color: #fff; border-bottom: 1px solid #fff}
-.films-new .film-thumb .name-place span {color: #94b5c5}
-.films-new .film-thumb .button-place button.watch-btn {background: url("../img/film-new-btn.png") no-repeat 0 0; color: #fff;}
-.films-new .film-thumb .button-place button.watch-btn span {color: #bdb3b3;}
-.films-new .film-thumb .button-place button.playlist-btn {background: url("../img/film-new-btn.png") no-repeat -160px 0; color: #e6b300;}
-.films-new .film-thumb .button-place button.subscribe-btn {color: #fff}
-.films-new .film-thumb .watchprice {color: #94b5c5}
-.films-new .film-thumb .watchprice a {color: #fff; border-bottom: 1px solid #fff}
+.person-thumb {min-height: 65px;}
+.person-thumb .photo {width: 60px; height: 60px; text-align: center; float: left}
+.person-thumb p {margin-left: 70px; font-size: 16px; line-height: 60px}
+.person-thumb p a {color: #4868CD; border-bottom: 1px solid #4868CD}
 
+.comment-thumb {min-height: 60px; margin-bottom: 10px}
+.comment-thumb .avatar-place {width: 60px; height: 60px; text-align: center; float: left}
+.comment-thumb .text-place {margin-left: 70px}
+.comment-thumb .text-place .info {padding-bottom: 10px; text-align: left; border-bottom: 1px dashed #C2BDBD}
+.comment-thumb .text-place .info .time {float: right; color: #C2BDBD}
+.comment-thumb .text-place .info .name a {color: #4868CD}
+.comment-thumb .text-place .text {}
+
+.content-blue-wrapper .film-thumb .poster-wrapper {background: url("../img/film-new-poster-bg.png") no-repeat 50% 0;}
+.content-blue-wrapper .film-thumb .rating-place {background: #007ebc; color: #fff;}
+.content-blue-wrapper .film-thumb .name-place a {color: #fff; border-bottom: 1px solid #fff}
+.content-blue-wrapper .film-thumb .name-place span {color: #94b5c5}
+.content-blue-wrapper .film-thumb .button-place button.watch-btn {background: url("../img/film-new-btn.png") no-repeat 0 0; color: #fff;}
+.content-blue-wrapper .film-thumb .button-place button.watch-btn span {color: #bdb3b3;}
+.content-blue-wrapper .film-thumb .button-place button.playlist-btn {background: url("../img/film-new-btn.png") no-repeat -160px 0; color: #e6b300;}
+.content-blue-wrapper .film-thumb .button-place button.subscribe-btn {color: #fff}
+.content-blue-wrapper .film-thumb .watchprice {color: #94b5c5}
+.content-blue-wrapper .film-thumb .watchprice a {color: #fff; border-bottom: 1px solid #fff}
 
 .header-top {min-height: 100px; background: url("../img/header-bg.png")}
 .header-top .logo {height: 100px;}
@@ -77,33 +89,60 @@ footer .links li:last-child {padding-left: 20px}
 footer .social {line-height: 90px}
 footer .copyright {color: #7a7a7a; margin-bottom: 20px}
 
+.content-blue-wrapper {background: url("../img/new-bg.jpg") repeat; text-align: center}
+.content-blue-wrapper h2 {color: white; background-image: url("../img/film-new-h-bg.png");}
+.content-blue-wrapper h4 {color: white; text-transform: uppercase; font-size: 14px}
 /* index page */
 h2 {font-size: 20px; text-transform: uppercase; text-align: center; margin: 40px 0 20px 0; font-weight: bold; background-position: 50% 50%; background-repeat: no-repeat}
-.films-new-wrapper {background: url("../img/new-bg.jpg") repeat;}
-.films-new-wrapper h2 {color: white; background-image: url("../img/film-new-h-bg.png")}
-.films-wrapper h2 {color: #282828; background-image: url("../img/films-h-bg.png")}
 
-.filter-place, .films-more {width: 100%; height: 60px; }
-.filter-place .shadow, .films-more .shadow {height: 10px; background: url("../img/shadow.png") repeat-x 0 100%; margin: 0 5px 0 5px; border-radius: 0 0 40px 40px}
-.films-more {text-align: center; margin-bottom: 20px}
-.films-more button {border: 0; color: #5b78d0; text-transform: uppercase; font-weight: bold; font-size: 20px; background: url("../img/more-bg.png") repeat-x; border-radius: 5px; width: 100%; height: 50px}
-.films-more button span {border-bottom: 1px dashed #5b78d0}
-.films-wrapper .films {margin-top: 30px}
-.filter {background: url("../img/more-bg.png") repeat-x; border-radius: 5px; height: 50px; margin: 0; padding: 0 15px 0 15px}
-.select-wrapper select {background: transparent; font-size: 16px; border: 0; border-bottom: 1px dashed #4868cd; color: #4868cd; -webkit-appearance: none; margin-right: 10px; font-weight: bold; }
-.select-wrapper {background: url("../img/dropdown.png") right 50% no-repeat;  display: inline-block;}
-.filter-sort {float: right; font-weight: bold; font-size: 16px; margin-top: 13px}
-.filter-main .select-wrapper {margin-left: 20px; border-left: 1px solid #c8c8c8; padding-left: 20px; margin-top: 13px}
-.filter-main .select-wrapper:first-child {border: 0}
-.comments-wrapper {background: url("../img/comments-bg.jpg") repeat}
-.comments-wrapper h2 {color: white; background-image: url("../img/comments-h-bg.png")}
-.comment-place {margin-bottom: 20px}
-.comment-place .comment-wrapper {background-color: #2e2727; border-radius: 10px; padding-bottom: 5px;}
-.comment-place .comment {background: #fff; border-radius: 10px; padding: 20px}
-.comment-place .comment .rating {margin-bottom: 5px}
-.comment-place .user {text-align: center}
-.comment-place .user .avatar {width: 130px; background: url("../img/comment-who.png") no-repeat; text-align: center; margin: -5px auto 0 auto; padding-top: 20px;}
-.comment-place .user .avatar img {max-height: 70px; max-width: 70px}
-.comment-place .user .name {margin: 20px 0 5px 0}
-.comment-place .user .name a {color: #e6b908; border-bottom: 1px solid #e6b908; font-weight: bold}
-.comment-place .user .city {color: #716c6c}
+.page-index .films-wrapper h2 {color: #282828; background-image: url("../img/films-h-bg.png")}
+.page-index .filter-place, .films-more {width: 100%; height: 60px; }
+.page-index .filter-place .shadow, .films-more .shadow {height: 10px; background: url("../img/shadow.png") repeat-x 0 100%; margin: 0 5px 0 5px; border-radius: 0 0 40px 40px}
+.page-index .films-more {text-align: center; margin-bottom: 20px}
+.page-index .films-more button {border: 0; color: #5b78d0; text-transform: uppercase; font-weight: bold; font-size: 20px; background: url("../img/more-bg.png") repeat-x; border-radius: 5px; width: 100%; height: 50px}
+.page-index .films-more button span {border-bottom: 1px dashed #5b78d0}
+.page-index .films-wrapper .films {margin-top: 30px}
+.page-index .filter {background: url("../img/more-bg.png") repeat-x; border-radius: 5px; height: 50px; margin: 0; padding: 0 15px 0 15px}
+.page-index .select-wrapper select {background: transparent; font-size: 16px; border: 0; border-bottom: 1px dashed #4868cd; color: #4868cd; -webkit-appearance: none; margin-right: 10px; font-weight: bold; }
+.page-index .select-wrapper {background: url("../img/dropdown.png") right 50% no-repeat;  display: inline-block;}
+.page-index .filter-sort {float: right; font-weight: bold; font-size: 16px; margin-top: 13px}
+.page-index .filter-main .select-wrapper {margin-left: 20px; border-left: 1px solid #c8c8c8; padding-left: 20px; margin-top: 13px}
+.page-index .filter-main .select-wrapper:first-child {border: 0}
+.page-index .comments-wrapper {background: url("../img/comments-bg.jpg") repeat}
+.page-index .comments-wrapper h2 {color: white; background-image: url("../img/comments-h-bg.png")}
+.page-index .comment-place {margin-bottom: 20px}
+.page-index .comment-place .comment-wrapper {background-color: #2e2727; border-radius: 10px; padding-bottom: 5px;}
+.page-index .comment-place .comment {background: #fff; border-radius: 10px; padding: 20px}
+.page-index .comment-place .comment .rating {margin-bottom: 5px}
+.page-index .comment-place .user {text-align: center}
+.page-index .comment-place .user .avatar {width: 130px; background: url("../img/comment-who.png") no-repeat; text-align: center; margin: -5px auto 0 auto; padding-top: 20px;}
+.page-index .comment-place .user .avatar img {max-height: 70px; max-width: 70px}
+.page-index .comment-place .user .name {margin: 20px 0 5px 0}
+.page-index .comment-place .user .name a {color: #e6b908; border-bottom: 1px solid #e6b908; font-weight: bold}
+.page-index .comment-place .user .city {color: #716c6c}
+
+/* register and login page */
+.page-reglog h4 {margin-top: 50px; margin-bottom: 30px}
+.page-reglog .social {line-height: 90px; margin-bottom: 20px}
+.page-reglog .form-group {margin: 0 auto 30px auto; max-width: 300px; display: block}
+.page-reglog form input {width: 95%;  font-size: 14px;}
+.page-reglog form input[type="submit"] {color: #fff; background-color: #F2C203; max-width: 230px; text-transform: uppercase; padding: 15px; font-weight: bold}
+
+/* film page */
+.page-film .films-wrapper {background: #282828; padding: 20px 0 20px 0; margin-bottom: 40px}
+.page-film .films-wrapper h1 {color: #fff; font-size: 24px}
+.page-film .films-wrapper h1 em {display: block; color: #C8C8C8; font-size: 20px; font-style: normal}
+.page-film .films-wrapper .player-place {text-align: center;}
+.page-film .films-wrapper .player-place .player {}
+
+.page-film .film-info table {margin: 0 20px 0 20px; font-size: 16px}
+
+.page-film .film-info table th {color: #C8C8C8; font-weight: normal; padding-right: 40px; padding-bottom: 10px}
+.page-film .film-info table td {color: #2E2727; padding-bottom: 10px}
+.page-film .film-info .rating-place {text-align: center; font-size: 14px}
+.page-film .film-info .rating-place .rating-header {background: #f00; color: #fff; text-transform: uppercase; padding: 10px 0 30px 0}
+.page-film .film-info .rating-cons-place {border-radius: 50%; width: 50px; height: 50px; background: #dee5f8; color: #7d7a7f; margin: -90px auto 0 auto; font-size: 18px; font-weight: bold}
+.page-film .film-info .rating-cons-place .rating-cons {margin: 0; padding: 0; line-height: 50px}
+.page-film .film-info .rating-cons-cnt {background: yellow; height: 70px;}
+.page-film .film-info .rating-cons-cnt p {padding-top: 40px;}
+.page-film .film-info .rating-all {margin-top: 40px; background: yellow; padding: 10px 0 20px 0}
