--- a/interface/jade/page_user.jade
+++ b/interface/jade/page_user.jade
@@ -1,10 +1,10 @@
 - header_title="Регистрация"
 html
-    include ../../interface-old/jade/config
-    include ../../interface-old/jade/head
+    include config
+    include head
 - user_regdate = new Date(user.regdate)
     body.user-page
-        include ../../interface-old/jade/header
+        include header
         .container
             h1=user.name
             .col-md-3.text-center
@@ -77,6 +77,6 @@ html
                         .clearfix
                         .more-directors-fav#more_directors_fav_place
                             button.btn.btn-default#more_directors_fav Показать всех
-        include ../../interface-old/jade/footer
+        include footer
         script.
             $(document).ready(function () {window.InitApp({page_conf: !{JSON.stringify(user)}}, "User")})
