-fixed error on the page_person

--- a/interface/jade/page_person.jade
+++ b/interface/jade/page_person.jade
@@ -1,5 +1,6 @@
 - header_title = person.name
 html
+    include ../../interface/jade/config
     include ../../interface/jade/head
     include ../../interface/jade/globals
     include ../../interface/jade/mixins
