--- a/interface/jade/page_user.jade
+++ b/interface/jade/page_user.jade
@@ -1,10 +1,12 @@
 - header_title="Регистрация"
 html
-    include config
-    include head
+    include ../../interface/jade/config
+    include ../../interface/jade/head
+    include ../../interface/jade/globals
+    include ../../interface/jade/mixins
 - user_regdate = new Date(user.regdate)
     body.user-page
-        include header
+        include ../../interface/jade/header
         .container
             h1=user.name
             .col-md-3.text-center
@@ -77,6 +79,6 @@ html
                         .clearfix
                         .more-directors-fav#more_directors_fav_place
                             button.btn.btn-default#more_directors_fav Показать всех
-        include footer
+        include ../../interface/jade/footer
         script.
             $(document).ready(function () {window.InitApp({page_conf: !{JSON.stringify(user)}}, "User")})
