--- a/interface/jade/page_registration.jade
+++ b/interface/jade/page_registration.jade
@@ -20,16 +20,16 @@ html(lang="ru")
                 h4 или используйте один из сервисов
                 ul.list-inline.social
                     li
-                        a(href="#")
+                        a(href="/login/fb_oauth")
                             img(src="static/img/social-fb.png",alt="Зарегистрироваться через Фейсбук")
                     li
-                        a(href="#")
+                        a(href="/login/twitter/")
                             img(src="static/img/social-twitter.png",alt="Зарегистрироваться через Твиттер")
                     li
-                        a(href="#")
+                        a(href="/login/googleplus/")
                             img(src="static/img/social-rss.png",alt="Зарегистрироваться через Google+")
                     li
-                        a(href="#")
+                        a(href="/login/vk_oauth/")
                             img(src="static/img/social-vk.png",alt="Зарегистрироваться через ВКонтакте")
         include footer
         script.
