Fixed bug with login template

--- a/interface/jade/page_login.jade
+++ b/interface/jade/page_login.jade
@@ -16,7 +16,7 @@ html(lang="ru")
                         input(type="password",name="password",placeholder="Пароль",required="required")#inp_password
                     .form-group
                         p
-                            a(href="#) Забыли пароль?
+                            a(href="#") Забыли пароль?
                         input(type="submit",value="Войти")#btn_submit
                 h4 или используйте один из сервисов
                 ul.list-inline.social
